# discors

./: .gitignore  Cargo.toml  README.md
.github/workflows/: clippy.yml  test.yml
disco-rs/: Cargo.toml
disco-rs/src/: color.rs  lib.rs  macros.rs  permissions.rs  snowflake.rs
disco-rs/src/client/: intents.rs  mod.rs  state.rs
disco-rs/src/models/: user.rs
disco-rs/src/models/channel/: overwrites.rs
disco-rs/src/models/traits/: messagable.rs  mod.rs
disco-rs/src/utilities/: serde.rs
discors/: Cargo.toml
discors/src/: color.rs  error.rs  lib.rs  locale.rs  permissions.rs  presence.rs  snowflake.rs  timestamp.rs
discors/src/client/: mod.rs  state.rs
discors/src/models/: mod.rs  user.rs
discors/src/models/channel/: mod.rs
examples/basic-bot/: Cargo.toml
examples/basic-bot/src/: main.rs
