[package]
edition = "2021"
name = "discors"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
client = ["presence"]
default = ["default_no_version", "v10"]
default_no_version = ["client", "presence"]
presence = []
v10 = []

[dependencies]
async-trait = "0.1"
serde_json = "1.0"
tokio = "0.2"

[dependencies.serde]
features = ["default", "derive"]
version = "1.0"

[dependencies.reqwest]
version = "0.9.0"
